--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.0.2",
     "@react-native-community/netinfo": "^9.3.4",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
@@ -20,7 +21,8 @@
     "react-native-permissions": "^3.6.1",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
-    "react-native-settings": "^0.2.3"
+    "react-native-settings": "^0.2.3",
+    "react-native-sms": "^1.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
