--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "permissions": "^0.1.0",
     "react": "18.1.0",
     "react-native": "^0.70.1",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-maps": "^1.3.1",
     "react-native-permissions": "^3.6.1",
     "react-native-safe-area-context": "^4.3.4",
