--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-community/geolocation": "^3.0.2",
     "@react-native-community/netinfo": "^9.3.4",
     "@react-navigation/native": "^6.0.13",
@@ -19,6 +20,8 @@
     "react-native": "^0.70.1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-maps": "^1.3.1",
+    "react-native-modal": "^13.0.1",
+    "react-native-paper": "^4.12.5",
     "react-native-permissions": "^3.6.1",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
