--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "^0.70.1",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-maps": "^1.3.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^4.12.5",
     "react-native-permissions": "^3.6.1",
